2013-07-30  Dmitry Antipov  <dmantipov@yandex.ru>

	* xfaces.c (make_face_cache): For struct face_cache, prefer
	xmalloc to xzalloc and so avoid redundant call to memset.
	(Finternal_set_lisp_face_attribute): Fix comment typo and style.

2013-07-30  Dmitry Antipov  <dmantipov@yandex.ru>

	* fringe.c (draw_window_fringes, update_window_fringes)
	(compute_fringe_widths):
	* w32term.c (x_draw_glyph_string):
	* window.c (candidate_window_p, Frecenter):
	* xfaces.c (realize_basic_faces, realize_default_face)
	(Fbitmap_space_p, Finternal_set_lisp_face_attribute)
	(x_update_menu_appearance, face_attr_equal_p, lface_equal_p):
	* xfns.c (x_set_cursor_color, xic_free_xfontset):
	* xmenu.c (Fx_menu_bar_open_internal):
	* xselect.c (x_reply_selection_request, Fx_get_atom_name):
	* xsettings.c (xft_settings_event):
	* xterm.c (x_draw_glyph_string, x_had_errors_p):
	Use bool for booleans.  Adjust style and comments where
	appropriate.
	* dispextern.h (draw_window_fringes, update_window_fringes)
	(compute_fringe_widths):
	* xterm.h (x_had_errors_p): Adjust prototype.

2013-07-30  Dmitry Antipov  <dmantipov@yandex.ru>

	* frame.c (Fmodify_frame_parameters): Always check 2nd arg with
	CHECK_LIST.  Rewrite the loop to avoid useless local variable.

2013-07-29  Dmitry Antipov  <dmantipov@yandex.ru>

	* fns.c (toplevel): Remove comment before Fsafe_length because
	it checks for QUIT.

2013-07-28  Paul Eggert  <eggert@cs.ucla.edu>

	* frame.c (delete_frame): Avoid unnecessary 'this_f' test (Bug#14970).

2013-07-28  Eli Zaretskii  <eliz@gnu.org>

	* w32fns.c (w32_wnd_proc) <WM_IME_STARTCOMPOSITION>: Make sure the
	frame which got the message is still alive, before dereferencing
	its pointer.  (Bug#14970)

	* frame.c (delete_frame): Test "this" frame's minibuffer window to
	be a live window, before using it as such.  (Bug#14970)

2013-07-27  Eli Zaretskii  <eliz@gnu.org>

	* w32term.c (w32_read_socket) <WM_KILLFOCUS>: Call